# afl_server

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  default_env  docker-compose.yml
.gitea/workflows/: dev.yml  rust.yml
src/: main.rs
src/handlers/: afl_handler.rs  favicon.rs  mod.rs
