[package]
name = "afl_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = { git = "https://github.com/DavidJArnold/afl", version = "0.1.0" }
axum = "0.7.6"
tokio = { version = "1.0", features = ["full"] }
