[package]
name = "afl_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = { git = "https://github.com/DavidJArnold/afl", version = "0.1.0" }
axum = "0.7.6"
chrono = "0.4.41"
itertools = "0.14.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
